--- a/index.html
+++ b/index.html
@@ -6,20 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
 
   <body>
-    <h1>Computer Shop</h1>
+    <header>
+    <div class="navegation">
+      <nav> Informação independente e análise confiável</nav>
+      <nav>   Pergunte à comunidade  |    Escreva um comentário | Conecte-se
+      </nav>
+    </div>  
+    <div class="title">
+    <img src="pc.jpg" alt="" height="120px">
+    <div class="titulo-h1"><h1>Digital Tech</h1></div>
+    <label>
+      <input type="text" >
+      <button class="btn btn-primary">Procurar</button>
+    </label>
+    </div>
+    </header>
     <section class="loading">Loading...</section>
     <section class="container" style="display: none;">
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <button class="empty-cart btn btn-primary">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
         <p>Preço Total: $<span class="total-price"></span></p>
       </section>
     </section>
-  <script src="script.js" defer></script>
   </body>
 </html>
